spacing fix

--- a/solar-system/styles/solar-system.css
+++ b/solar-system/styles/solar-system.css
@@ -480,6 +480,7 @@ main {
     .banner h3 {
         font-size: 1.5rem;
         padding: 1rem 0 2rem 0;
+        margin-left: 15px;
     }
 
     .res-link {
@@ -494,6 +495,10 @@ main {
         font-size: 1.25rem;
         padding-bottom: .5rem;
     
+    }
+
+    .intro {
+        padding: 0 2rem 1rem 1rem;
     }
 }
 
